syntax = "proto3";

package admin_service;

service Admin {
  rpc shutdown(ShutdownRequest) returns (ShutdownResponse) {}
}

message ShutdownRequest {}
message ShutdownResponse {}
